domains/networking/gatewayapi/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo
        args: ["-text", "echo-pod"]
        ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-service
  namespace: webserver
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: nginx
  type: ClusterIP
status:
  loadBalancer: {}
